--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prettier": "2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "3.39.3",
     "react-router": "6.10.0",
+    "react-router-dom": "6.10.0",
     "sass": "1.61.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
+    "@vitejs/plugin-react": "3.1.0",
+    "eslint": "8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "34.0.1",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.32.2",
+    "typescript": "4.9.3",
+    "vite": "4.2.0"
   }
 }
