--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "1.3.6",
     "prettier": "2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.3",
     "react-router": "6.10.0",
     "react-router-dom": "6.10.0",
-    "sass": "1.61.0"
+    "sass": "1.61.0",
+    "url": "^0.11.0",
+    "vite-plugin-svgr": "2.4.0",
+    "vite-tsconfig-paths": "4.2.0"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
