--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "types": ["node", "vite/client"],
+    "baseUrl": "src",
+    "paths": {
+      "@src/*": ["./*"],
+      "@public/*": ["../public/*"]
+    },
     "jsx": "react-jsx"
   },
   "include": ["src"],
