--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.4.5",
     "axios": "1.3.6",
     "prettier": "2.8.7",
     "react": "18.2.0",
