--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.194",
     "antd": "^5.4.5",
     "axios": "1.3.6",
+    "lodash": "^4.17.21",
     "prettier": "2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
