--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.14.194",
     "antd": "^5.4.5",
     "axios": "1.3.6",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "prettier": "2.8.7",
@@ -21,6 +22,7 @@
     "react-query": "3.39.3",
     "react-router": "6.10.0",
     "react-router-dom": "6.10.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "sass": "1.61.0",
     "url": "^0.11.0",
