--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "1.3.6",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "prettier": "2.8.7",
     "react": "18.2.0",
