--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.2.9",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "prettier": "2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,7 +29,8 @@
     "sass": "1.61.0",
     "url": "^0.11.0",
     "vite-plugin-svgr": "2.4.0",
-    "vite-tsconfig-paths": "4.2.0"
+    "vite-tsconfig-paths": "4.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
